--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -5,9 +5,9 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "T4",
+      "gpuType": "A100",
       "mount_file_id": "1nAefVDdcgMMTptTo1O_SdAw8eZPMTjtC",
-      "authorship_tag": "ABX9TyPtepoDwtMbPA5sI2AQzKQx",
+      "authorship_tag": "ABX9TyOHNAmz5H6KfibBfMQayvJ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "UCzp9kYZ1AbK"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "7Q5UbR1OtWpJ"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "9HZhipCkmbIg"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "UsrqjAvH1zLd"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "qb28CDhZ12bc"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "xOTJlL8O2vZN"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "k6WmGEc-37vX"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
       "metadata": {
         "id": "pXFgzCmGCKJQ"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -335,7 +335,7 @@
       "metadata": {
         "id": "SYAQrsOHWXrn"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -347,7 +347,7 @@
       "metadata": {
         "id": "VMexcurxYR3f"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -360,7 +360,7 @@
       "metadata": {
         "id": "SIVzlHLNYm4p"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -374,7 +374,7 @@
       "metadata": {
         "id": "zz1u9VvibJAI"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -384,8 +384,8 @@
         "cnnModel = keras.Sequential()\n",
         "cnnModel.add(layers.Conv2D(filters=32, kernel_size=(3,3), input_shape=(204,256,3)))\n",
         "cnnModel.add(layers.Conv2D(filters=32, kernel_size=(3,3)))\n",
-        "cnnModel.add(layers.Conv2D(filters=32, kernel_size=(2,2)))\n",
         "cnnModel.add(layers.MaxPool2D(pool_size=(3,3)))\n",
+        "cnnModel.add(layers.Dropout(0.5))\n",
         "cnnModel.add(layers.Flatten())\n",
         "cnnModel.add(layers.Dense(50, activation=\"relu\"))\n",
         "cnnModel.add(layers.Dense(100, activation=\"relu\"))\n",
@@ -399,55 +399,55 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0fe4733e-9c82-43da-b714-853343d236bc"
+        "outputId": "2b79f85b-612b-40ac-96e5-f2cf41d42970"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/15\n",
-            "147/147 [==============================] - 13s 42ms/step - loss: 0.9065 - accuracy: 0.6571 - val_loss: 0.5361 - val_accuracy: 0.7302\n",
+            "147/147 [==============================] - 4s 15ms/step - loss: 0.9849 - accuracy: 0.6571 - val_loss: 0.5051 - val_accuracy: 0.8048\n",
             "Epoch 2/15\n",
-            "147/147 [==============================] - 5s 33ms/step - loss: 0.3060 - accuracy: 0.8823 - val_loss: 0.2730 - val_accuracy: 0.8825\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 0.2844 - accuracy: 0.8857 - val_loss: 0.2225 - val_accuracy: 0.9143\n",
             "Epoch 3/15\n",
-            "147/147 [==============================] - 5s 32ms/step - loss: 0.1286 - accuracy: 0.9503 - val_loss: 0.2465 - val_accuracy: 0.8952\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 0.1564 - accuracy: 0.9435 - val_loss: 0.5081 - val_accuracy: 0.8111\n",
             "Epoch 4/15\n",
-            "147/147 [==============================] - 5s 33ms/step - loss: 0.0558 - accuracy: 0.9803 - val_loss: 0.1961 - val_accuracy: 0.9222\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 0.2546 - accuracy: 0.9143 - val_loss: 0.5686 - val_accuracy: 0.8048\n",
             "Epoch 5/15\n",
-            "147/147 [==============================] - 5s 32ms/step - loss: 0.0160 - accuracy: 0.9966 - val_loss: 0.2397 - val_accuracy: 0.9206\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 0.1140 - accuracy: 0.9565 - val_loss: 0.4295 - val_accuracy: 0.8683\n",
             "Epoch 6/15\n",
-            "147/147 [==============================] - 5s 32ms/step - loss: 0.0020 - accuracy: 1.0000 - val_loss: 0.2403 - val_accuracy: 0.9270\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 0.0350 - accuracy: 0.9884 - val_loss: 0.3966 - val_accuracy: 0.8905\n",
             "Epoch 7/15\n",
-            "147/147 [==============================] - 5s 32ms/step - loss: 5.2729e-04 - accuracy: 1.0000 - val_loss: 0.2602 - val_accuracy: 0.9270\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 0.0146 - accuracy: 0.9952 - val_loss: 0.3772 - val_accuracy: 0.9063\n",
             "Epoch 8/15\n",
-            "147/147 [==============================] - 5s 32ms/step - loss: 3.3128e-04 - accuracy: 1.0000 - val_loss: 0.2844 - val_accuracy: 0.9270\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 0.0015 - accuracy: 1.0000 - val_loss: 0.4124 - val_accuracy: 0.9032\n",
             "Epoch 9/15\n",
-            "147/147 [==============================] - 5s 33ms/step - loss: 2.4729e-04 - accuracy: 1.0000 - val_loss: 0.2708 - val_accuracy: 0.9270\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 0.0011 - accuracy: 1.0000 - val_loss: 0.4215 - val_accuracy: 0.9063\n",
             "Epoch 10/15\n",
-            "147/147 [==============================] - 5s 33ms/step - loss: 1.8691e-04 - accuracy: 1.0000 - val_loss: 0.2749 - val_accuracy: 0.9286\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 2.2538e-04 - accuracy: 1.0000 - val_loss: 0.4126 - val_accuracy: 0.9127\n",
             "Epoch 11/15\n",
-            "147/147 [==============================] - 5s 33ms/step - loss: 1.4569e-04 - accuracy: 1.0000 - val_loss: 0.2872 - val_accuracy: 0.9254\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 1.3457e-04 - accuracy: 1.0000 - val_loss: 0.4414 - val_accuracy: 0.9063\n",
             "Epoch 12/15\n",
-            "147/147 [==============================] - 5s 33ms/step - loss: 1.1681e-04 - accuracy: 1.0000 - val_loss: 0.2915 - val_accuracy: 0.9254\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 1.0637e-04 - accuracy: 1.0000 - val_loss: 0.4375 - val_accuracy: 0.9127\n",
             "Epoch 13/15\n",
-            "147/147 [==============================] - 5s 33ms/step - loss: 9.4766e-05 - accuracy: 1.0000 - val_loss: 0.3018 - val_accuracy: 0.9286\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 8.3752e-05 - accuracy: 1.0000 - val_loss: 0.4387 - val_accuracy: 0.9095\n",
             "Epoch 14/15\n",
-            "147/147 [==============================] - 5s 33ms/step - loss: 7.9237e-05 - accuracy: 1.0000 - val_loss: 0.2980 - val_accuracy: 0.9286\n",
+            "147/147 [==============================] - 1s 8ms/step - loss: 6.2529e-05 - accuracy: 1.0000 - val_loss: 0.4520 - val_accuracy: 0.9079\n",
             "Epoch 15/15\n",
-            "147/147 [==============================] - 5s 33ms/step - loss: 6.6446e-05 - accuracy: 1.0000 - val_loss: 0.3114 - val_accuracy: 0.9270\n"
+            "147/147 [==============================] - 1s 8ms/step - loss: 7.0904e-05 - accuracy: 1.0000 - val_loss: 0.4664 - val_accuracy: 0.9095\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7cb7cc102590>"
+              "<keras.src.callbacks.History at 0x7c03cca8baf0>"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 27
         }
       ]
     },
@@ -461,26 +461,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c9636f2b-4cdd-4d5e-edb4-3ec131f7716e"
+        "outputId": "c4e8d768-1332-4609-9118-20e4ff45194a"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "29/29 [==============================] - 3s 38ms/step - loss: 0.2933 - accuracy: 0.9222\n"
+            "29/29 [==============================] - 0s 9ms/step - loss: 0.4485 - accuracy: 0.9200\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.2932822108268738, 0.9222221970558167]"
+              "[0.4485227167606354, 0.9200000166893005]"
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 28
         }
       ]
     },
